my projects, images gap fix

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -80,7 +80,7 @@ h1 {
 
 h2 {
   font-size: 4rem;
-  margin-bottom: 5rem; }
+  margin-bottom: 4rem; }
   @media only screen and (max-width: 768px) {
     h2 {
       font-size: 3rem; } }
