--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -24,7 +24,7 @@ h1{
 
 h2{
     font-size: 4rem;
-    margin-bottom: 5rem;
+    margin-bottom: 4rem;
 
     //tablet
     @media only screen and (max-width: 768px){
